# choom

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  qml_resources.qrc  resources.qrc  tab.cpp
include/: macos_titlebar.h
include/core/: connection_storage.h  query_executor.h  utils.h
include/database/: database_connection.h  mysql_connection.h  postgres_connection.h
include/ui/: connection_dialog.h  connection_tree_model.h  mainwindow.h  spinner_icon.h  sql_editor.h  table_viewer.h  welcome_widget.h
qml/: RoundedWebView.qml  TabsList.qml
src/: command_palette.cpp  command_palette.h  macos_titlebar.h  macos_titlebar.mm  main.cpp  mainwindow.cpp  mainwindow.h  qmltabswidget.cpp  qmltabswidget.h  qmlwebview.cpp  qmlwebview.h  tab.cpp  tab.h  title_bar.cpp  title_bar.h  utils.cpp  utils.h  webview_container.cpp  webview_container.h
src/core/: connection_storage.cpp  connection_storage.h  query_executor.cpp  query_executor.h  utils.cpp
src/database/: connection_manager.cpp  connection_manager.h  database_connection.cpp  database_connection.h  mysql_connection.cpp  postgres_connection.cpp  sqlite_connection.cpp  sqlite_connection.h
src/ui/: Spinner.qml  connection_dialog.cpp  connection_dialog.h  connection_tree_model.cpp  connection_tree_model.h  mainwindow.cpp  mainwindow.h  spinner_icon.cpp  spinner_icon.h  sql_editor.cpp  sql_editor.h  table_viewer.cpp  table_viewer.h  title_bar.cpp  welcome_widget.cpp
